--- a/src/templates/hello-world.html
+++ b/src/templates/hello-world.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
     </head>
-    <body>
-        <h1 class="text-3xl font-bold underline">Hello world!</h1>
+    <body>        
+        <h1 class="text-3xl font-bold underline">{{project_name}} project!</h1>
     </body>
 </html>
