--- a/src/templates/hello-world.html
+++ b/src/templates/hello-world.html
@@ -1,13 +1,13 @@
-{{ load static }}
+{% load static %}
 <!DOCTYPE html>
 <html>
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4"></script>
-        <link rel="stylesheet" href="{{ static 'app/custom.css' }}">
+        <link rel="stylesheet" href="{% static 'app/custom.css' %}" />
     </head>
-    <body>        
+    <body>
         <h1 class="text-3xl font-bold underline">{{project_name}} project!</h1>
     </body>
 </html>
